// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkThemeProvider should correctly flatten the themeAttribute prop 1`] = `
<div
  style={
    Object {
      "--bpk-background": "black",
      "--bpk-color": "rgb(255, 255, 255)",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should render correctly 1`] = `
<div
  style={
    Object {
      "--bpk-color": "rgb(255, 255, 255)",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should render correctly with arbitrary props 1`] = `
<div
  id="arbitrary"
  style={
    Object {
      "--bpk-color": "rgb(255, 255, 255)",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should render correctly with arbitrary user defined style 1`] = `
<div
  style={
    Object {
      "--bpk-color": "rgb(255, 255, 255)",
      "content": "user defined",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should render correctly with custom component 1`] = `
<span
  style={
    Object {
      "--bpk-color": "rgb(255, 255, 255)",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</span>
`;

exports[`BpkThemeProvider should render correctly with custom component function 1`] = `
<span
  style={
    Object {
      "--bpk-color": "rgb(255, 255, 255)",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</span>
`;

exports[`BpkThemeProvider should render correctly with custom native component 1`] = `
<header
  style={
    Object {
      "--bpk-color": "rgb(255, 255, 255)",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</header>
`;

exports[`BpkThemeProvider should render without theming when theme is missing attributes 1`] = `
<div
  style={Object {}}
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`BpkThemeProvider should strip out extraneous theme attributes 1`] = `
<div
  style={
    Object {
      "--bpk-color": "rgb(255, 255, 255)",
    }
  }
>
  <p>
    Lorem Ipsum
  </p>
</div>
`;
